@@ -44,7 +44,7 @@
 
     <target name="compile">
         <mkdir dir="${classes.dir}"/>
-        <javac source="1.7" target="1.7" srcdir="${src.dir}" destdir="${classes.dir}" classpathref="classpath"/>
+        <javac source="1.8" target="1.8" srcdir="${src.dir}" destdir="${classes.dir}" classpathref="classpath"/>
     </target>
 
     <target name="jar-workbench" depends="compile">
